[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "konapy"
version = "0.0.1"
authors = [
    {name = "Georgy Melnikov", email = "gmelnikov@hotmail.com"},
]
description = "Friendly and cute telegram bot"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["telegram", "bot", "konachan", "imageboard"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiogram==2.21",
    "beautifulsoup4",
    "requests"
]

[project.scripts]
kona = "kona.__init__:main"
